--- a/README
+++ b/README
@@ -3,14 +3,15 @@ Project with Microcontroller
 Linköpings universitet
 2022
 
-Kursinnehåll:
+Course content:
 
--Modern utvecklings- och simuleringsmiljö
--Mikrokontroller
--Digital elektronik
--Analog elektronik
--In- och utenheter
--Assemblerprogrammering
--Felsökning
--Datablad
--Strukturerad programmering
+- Design methodology:
+- Modern development and simulation environment
+- Microcontrollers
+- Digital electronics
+- Analog Electronics
+- Input and output devices
+- Assembly programming
+- Troubleshooting
+- Data sheets
+- Structured programming
